# homepage

./: README.md  homepage.cabal  index.html  stack.yaml
app/: Main.hs
data/: main.css  main.js
src/: EasyHTML.hs  RawHTML.hs
