name:                homepage
version:             0.1.0.0
synopsis:            Homepage metalra.in
description:         Please see README.md
homepage:            https://github.com/MetalRain/homepage#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Otto Martikainen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RawHTML
                     , EasyHTML
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable homepage-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , homepage
  default-language:    Haskell2010
